--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
+altair==5.0.1
 ansi2html==1.8.0
 appnope==0.1.3
 asttokens==2.2.1
 async-timeout==4.0.2
 attrs==23.1.0
 backcall==0.2.0
+blinker==1.6.2
+cachetools==5.3.1
 category-encoders==2.6.1
 certifi==2023.5.7
 charset-normalizer==3.1.0
@@ -29,6 +32,8 @@ fastjsonschema==2.17.1
 Flask==2.2.5
 fonttools==4.40.0
 frozenlist==1.3.3
+gitdb==4.0.10
+GitPython==3.1.32
 greenlet==2.0.2
 idna==3.4
 imbalanced-learn==0.10.1
@@ -52,11 +57,13 @@ langchain==0.0.219
 langchainplus-sdk==0.0.17
 lightgbm==3.3.5
 llvmlite==0.40.1
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 multidict==6.0.4
 mypy-extensions==1.0.0
 nbformat==5.9.0
@@ -79,21 +86,28 @@ plotly==5.15.0
 plotly-resampler==0.8.3.2
 pmdarima==2.0.3
 prompt-toolkit==3.0.38
+protobuf==4.23.4
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyarrow==12.0.1
 pycaret==3.0.3
 pydantic==1.10.10
+pydeck==0.8.1b0
 Pygments==2.15.1
+Pympler==1.0.1
 pyod==1.1.0
 pyparsing==3.1.0
 pyrsistent==0.19.3
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
 pyzmq==25.1.0
 requests==2.31.0
 retrying==1.3.4
+rich==13.4.2
 schemdraw==0.15
 scikit-base==0.5.0
 scikit-learn==1.2.2
@@ -101,12 +115,17 @@ scikit-plot==0.3.7
 scipy==1.11.1
 six==1.16.0
 sktime==0.20.0
+smmap==5.0.0
 SQLAlchemy==2.0.17
 stack-data==0.6.2
 statsmodels==0.14.0
+streamlit==1.24.1
+streamlit-chat==0.1.1
 tbats==1.1.3
 tenacity==8.2.2
 threadpoolctl==3.1.0
+toml==0.10.2
+toolz==0.12.0
 tornado==6.3.2
 tqdm==4.65.0
 trace-updater==0.0.9.1
@@ -114,7 +133,9 @@ traitlets==5.9.0
 typing-inspect==0.9.0
 typing_extensions==4.7.0
 tzdata==2023.3
+tzlocal==4.3.1
 urllib3==2.0.3
+validators==0.20.0
 wcwidth==0.2.6
 Werkzeug==2.2.3
 widgetsnbextension==4.0.7
